# pytexas.github.io

./: .gitignore  .lycheeignore  404.html  CLAUDE.md  LICENSE.md  README.md  TODO.md  constraints.txt  index.html  justfile  mkdocs.yml  pelicanconf.py  publishconf.py  pyproject.toml  requirements.in  requirements.txt  sitemap.xml  tasks.py
.github/workflows/: ci.yml  corvid.yml  link-check.yml  pelican.yml
2007/: index.html
2008/: index.html
2009/: index.html
2010/: index.html
2011/: index.html
2012/: index.html
2016/: index.html
2017/: index.html
2018/: index.html
2019/: index.html
2021/: index.html
about/: index.html
about/code-of-conduct/: index.html
about/diversity-statement/: index.html
about/faq/: index.html
about/grants/: index.html
about/privacy-statement/: index.html
about/pytexas/: index.html
about/volunteering/: index.html
assets/css/: theme.min.css
assets/js/: theme.js
blog/: index.html
blog/2023-recap/: index.html
conference/: index.html
content/pages/: about.rst
discord/: index.html
docs/: 2016.md  2018.md  conference.md  discord.md  friends.md  index.md  links.md  newsletter.md  privacy.md
foundation/: mkdocs.yml
friends/: index.html
links/: index.html
meetup-info/: index.html
newsletter/: index.html
overrides/: home.html  main.html
privacy/: index.html
schedule/: index.html
search/: search_index.json
speaking/: index.html
sponsors/: index.html
sponsorship/: index.html
templates/: back.html  base.html  index.html  subpage.html
utils/: filters.py
venue/: index.html
(+117 files in other folders)
