[tool.poetry]
name = "pytexas-site"
version = "0.1.0"
description = ""
authors = ["Laura Santamaria <dev@nimbinatus.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pelican = "^4.8.0"
pelican-neighbors = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
