[tool.poetry]
name = "pytexas-site"
version = "1.0.0"
description = ""
authors = ["Laura Santamaria <dev@nimbinatus.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.2"
mkdocs-material = {extras = ["imaging"], version = "^9.4.2"}

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
